--- a/.github/ISSUE_TEMPLATE/roadmapItem.yml
+++ b/.github/ISSUE_TEMPLATE/roadmapItem.yml
@@ -1,4 +1,4 @@
-name: :bookmark: Roadmap Item
+name: [:bookmark:] Roadmap Item
 description: Suggest a new idea or improvement
 title: "[ROADMAP ITEM] <short description>"
 labels: ["Roadmap Item"]
