--- a/.github/ISSUE_TEMPLATE/roadmapItem.yml
+++ b/.github/ISSUE_TEMPLATE/roadmapItem.yml
@@ -1,5 +1,5 @@
 name: "🔖 Roadmap Item"
-description: Suggest a new idea or improvement
+description: New feature idea
 title: "[ROADMAP ITEM] <short description>"
 labels: ["Roadmap Item"]
 projects: ["EPIS Management"]
