--- a/.github/ISSUE_TEMPLATE/roadmapItem.yml
+++ b/.github/ISSUE_TEMPLATE/roadmapItem.yml
@@ -2,7 +2,7 @@ name: "🔖 Roadmap Item"
 description: New feature idea
 title: "[ROADMAP] <short description>"
 labels: [type:"Roadmap Item"]
-projects: [name:"EPIS Management"]
+project: [name:"EPIS Management"]
 
 body:
   - type: markdown
