--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -35,6 +35,15 @@ body:
     id: alternatives
     attributes:
       label: Alternatives considered (optional)
+  
+  - type: input
+      id: parent
+      attributes:
+        label: Parent issue - Roadmap Reference
+        description: "Use #123 (same repo) or owner/repo#123 (cross-repo, same org)."
+        placeholder: "GLB-ATOS-MSCC/epis-management#123"
+      validations:
+        required: false
 
   - type: checkboxes
     id: definition_of_ready
