--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -2,6 +2,7 @@ name: ✨ Feature Request
 description: Suggest a new idea or improvement
 title: "[FEATURE] <short description>"
 labels: [enhancement,"roadmap"]
+issue-type: ["Feature"]
 projects: ["GLB-ATOS-MSCC/16"]
 
 body:
