Fix issue-type field in feature request template

--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -2,7 +2,7 @@ name: ✨ Feature Request
 description: Suggest a new idea or improvement
 title: "[FEATURE] <short description>"
 labels: [enhancement,"roadmap"]
-issue-type: ["Feature"]
+type: ["Feature"]
 projects: ["GLB-ATOS-MSCC/16"]
 
 body:
