Add type field to bug report template
issue type added

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -2,6 +2,7 @@ name: '🐞 Bug Report'
 description: Report a bug or an issue you encountered on the platform.
 title: '[BUG]: Brief description of the problem'
 labels: ['bug', 'triage']
+type: "Bug"
 assignees: []
 body:
   - type: markdown
