Enhance roadmap item template with type and projects

--- a/.github/ISSUE_TEMPLATE/roadmapItem.yml
+++ b/.github/ISSUE_TEMPLATE/roadmapItem.yml
@@ -2,6 +2,7 @@ name: "🔖 Roadmap Item"
 description: New feature idea
 title: "[ROADMAP] <short description>"
 labels: [type:"roadmap"]
+type: "Feature"
 projects: ["GLB-ATOS-MSCC/16", "GLB-ATOS-MSCC/31"]
 
 body:
