Enhance task template with type attribute

--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -2,6 +2,7 @@ name: ✅ Task
 description: Define a technical or organizational task
 title: "[TASK] <short description>"
 labels: [task]
+type: "Task"
 body:
   - type: input
     id: summary
