Update roadmapItem.yml to simplify project list
Removed one project from roadmap item template.

--- a/.github/ISSUE_TEMPLATE/roadmapItem.yml
+++ b/.github/ISSUE_TEMPLATE/roadmapItem.yml
@@ -3,7 +3,7 @@ description: New feature idea
 title: "[ROADMAP] <short description>"
 labels: [type:"roadmap"]
 type: "Feature"
-projects: ["GLB-ATOS-MSCC/16", "GLB-ATOS-MSCC/31"]
+projects: ["GLB-ATOS-MSCC/16"]
 
 body:
   - type: markdown
